<resources>
    <string name="app_name">RestaurantApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
		completions."
	</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="item_image">Item image</string>

    <!-- App-specific strings -->
    <string name="comment_hint">Introduce aquí comentarios para cocina</string>
    <string name="default_text">Texto por defecto</string>
    <string name="default_amount">00,00 €</string>
    <string name="add_dish_to_order">Añadir al pedido</string>
    <string name="total_cost_label">Importe total del pedido:</string>
    <string name="order_bill_label">Desglose del pedido</string>
    <string name="total_order_cost_label">Importe total del pedido:</string>
    <string name="send_order">Finalizar el pedido</string>


    <string-array name="extra_amounts">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>


</resources>
