<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.DishDetailActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/extra_ing_list_view"
        android:layout_width="390dp"
        android:layout_height="282dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.907"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/add_dish_to_order_button"
        android:layout_width="220dp"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="92dp"
        android:background="@color/colorAppPrimary"
        android:text="@string/add_dish_to_order"
        android:textColor="@color/colorLightText"
        app:layout_constraintEnd_toStartOf="@+id/extra_ing_list_view"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dish_detail_img" />

    <TextView
        android:id="@+id/total_dish_price_txt"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/default_text"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/add_dish_to_order_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.26"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dish_detail_img"
        app:layout_constraintVertical_bias="1.0" />

    <android.support.design.widget.TextInputLayout

        android:id="@+id/textInputLayout2"
        android:layout_width="340dp"
        android:layout_height="74dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/extra_ing_list_view"
        app:layout_constraintHorizontal_bias="0.413"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/dish_comment_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/comment_hint" />
    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:id="@+id/dish_detail_img"
        android:layout_width="454dp"
        android:layout_height="243dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/item_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.155"
        app:srcCompat="@drawable/fingers" />

    <TextView
        android:id="@+id/dish_description_txt"
        android:layout_width="390dp"
        android:layout_height="176dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/default_text"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/extra_ing_list_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.551"
        app:layout_constraintStart_toEndOf="@+id/dish_detail_img"
        app:layout_constraintTop_toBottomOf="@+id/dish_name_txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dish_name_txt"
        android:layout_width="304dp"
        android:layout_height="72dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:text="@string/default_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.796"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dish_price_txt"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:text="@string/default_amount"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/dish_name_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.719"
        app:layout_constraintStart_toEndOf="@+id/dish_name_txt"
        app:layout_constraintTop_toTopOf="@+id/dish_name_txt"
        app:layout_constraintVertical_bias="0.875" />

    <TextView
        android:id="@+id/total_cost_label"
        android:layout_width="108dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_cost_label"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toStartOf="@+id/total_dish_price_txt"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dish_detail_img"
        app:layout_constraintVertical_bias="0.175" />


</android.support.constraint.ConstraintLayout>